Adding identity-based open API access control. Set default for claims to use identity-based control.
